--- a/package.json
+++ b/package.json
@@ -2,19 +2,33 @@
   "name": "redux-form-reducer",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "lib/index.js",
   "scripts": {
+    "build": "babel src --out-dir lib",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/gigobyte/redux-form-reducer.git"
   },
-  "keywords": [],
-  "author": "",
+  "keywords": [
+    "react",
+    "redux",
+    "form",
+    "reducer",
+    "simple"
+  ],
+  "author": "Stanislav Iliev",
   "license": "ISC",
   "bugs": {
     "url": "https://github.com/gigobyte/redux-form-reducer/issues"
   },
-  "homepage": "https://github.com/gigobyte/redux-form-reducer#readme"
+  "homepage": "https://github.com/gigobyte/redux-form-reducer#readme",
+  "devDependencies": {
+    "babel-cli": "^6.18.0",
+    "babel-core": "^6.21.0",
+    "babel-plugin-add-module-exports": "^0.2.1",
+    "babel-preset-es2015": "^6.18.0",
+    "babel-preset-stage-0": "^6.16.0"
+  }
 }
